methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: not found: value GetDirection
  if (GetDirection()==NORTH){
      ^MethodsArgs:3: error: not found: value NORTH
  if (GetDirection()==NORTH){
                      ^MethodsArgs:4: error: reassignment to val
    versLAvant=true
              ^MethodsArgs:7: error: reassignment to val
    versLAvant=false
              ^MethodsArgs:10: error: reassignment to val
  nbPas=6-getY()
       ^MethodsArgs:17: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-0 to nbPas){
          ^MethodsArgs:16: error: type mismatch;
 found   : Unit
 required: Int
  if(versLAvant==false){
  ^