methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant:Boolean): Int={
  if (GetDirection()==NORTH){
    versLAvant=true
  }
  else{
    versLAvant=false
  }

  nbPas=6-getY()
  if (versLAvant==true){
    for (i<- 0 to nbPas){
      avance()
    }
  }
  if(versLAvant==false){
    for (i<-0 to nbPas){
      recule()
    }
  }
}